fix: render best paper award line break in publications

--- a/styles.css
+++ b/styles.css
@@ -977,6 +977,8 @@ nav .container {
     /* text-transform: uppercase; */
     word-break: break-word;
     hyphens: auto;
+    display: block;
+    white-space: normal;
 }
 
 .pub-content {
